# DeviceForge

./: CLAUDE.md  CMakeLists.txt  DeployMaster.cpp  DeployMaster.h  build.bat  main.cpp
docs/: ROADMAP.md  architecture.md  build-guide.md  debugging-guide.md
src/adapter/: OpcUaAdapter.cpp  OpcUaAdapter.h
src/config/: ConfigStore.cpp  ConfigStore.h  DpapiCrypto.cpp  DpapiCrypto.h
src/framework/: DeviceInfo.h
src/model/: FtpManager.cpp  FtpManager.h
src/tools/FtpDeployTool/: FtpDeployWidget.cpp  FtpDeployWidget.h
src/tools/OpcUaClientTool/: OpcUaClientBackend.cpp  OpcUaClientBackend.h  OpcUaClientWidget.cpp  OpcUaClientWidget.h
src/ui/: DeviceBusWidget.cpp  DeviceBusWidget.h
src/updater/: UpdateChecker.cpp  UpdateDialog.cpp  UpdateDialog.h
tests/: CMakeLists.txt
tests/config/: tst_config_store.cpp  tst_dpapi_crypto.cpp
